--- a/templates/index/indexcrearcuenta.html
+++ b/templates/index/indexcrearcuenta.html
@@ -29,7 +29,10 @@
     <div class="recordar">¿olvidaste tu contraseña?</div>
     <input type="submit"value=iniciar>
     </div>
-
+      <div id="zettnino"> 
+        <!-- lo puse afuera de el otro div pq sino me lo toma como parte de el formulario -->
+        <img src="/utils/img/zettino_crearcuenta.png" alt="foto de la mascota">
+    </div>
  </form>
     </div>
     </div>
