--- a/templates/index/indexcentralayuda.html
+++ b/templates/index/indexcentralayuda.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Centro de Ayuda</title>
-    <link rel="stylesheet" href="Centralayuda.css" />
+    <link rel="stylesheet" href="/CET4/templates/css/Centralayuda.css" />
 </head>
 <body>
     <!-- Header -->
