Update del HTML home y CSS home, barra de busqueda

--- a/templates/index/indexhomeoinicio.html
+++ b/templates/index/indexhomeoinicio.html
@@ -7,19 +7,20 @@
     <title>Home</title>
 </head>
 <body>
+    <div class="elcostado">
+    </div>
      <div class="header">
-        <form>
-            <input class="buscador" placeholder="Preguntas. . ." type="text"> <span> <button> Waza </button></span>
+        <form class="buscador-logo">
+            <div class="buscador-logo2">
+            <img src="/CET4/utils/img/busqueda-de-lupa.png" alt="Logo" class="logo">
+            <input class="buscador" placeholder=" Preguntas. . ." type="text"> 
+            <span> <button> Search </button></span>
+            </div>
         </form>
     </div>
-    <div class="body">
-
+    <div class="contenido-principal">
     </div>
-    <div class="footer">
-
-    </div>
-    <div class="elcostado">
-
+    <div class="footer">  
     </div>
 </body>
 </html>
