--- a/templates/css/estilohomeoinicio.css
+++ b/templates/css/estilohomeoinicio.css
@@ -1,13 +1,43 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body{
     background-color: #082c54;
 }
 .buscador{
-    width: 50%;
-    height: 25px;
-    margin-left: 25%;
+    width: 75vh;
+    height: 35px;
+    margin-top: 20px;
+    border-radius: 20px;  /*Esto hace que el borde este mas redondeado */
+    border:none; /*Esto quita el borde*/
+    padding: 5px 10px 5px 35px;
 }
-.elcostado{
-    width: 25%;
-    height: 100%;
-    margin-top:25%;
+.elcostado {
+    width: 10%;
+    height: 100vh;
+    background-color:  #080c34 ;
+    float: left;
+}
+.buscador-logo{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    justify-content: center;
+
+}
+.buscador-logo2{
+    position: relative;
+    width: 500px;
+
+}
+.logo{
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+    height: 20px;
+    width: 20px;
+    pointer-events: none; /* para que no bloquee clics */
 }
