--- a/templates/index/indexprincipal.html
+++ b/templates/index/indexprincipal.html
@@ -10,7 +10,7 @@
     
   <header class="header"> 
     <!-- aca esta el coso de la pagina el coso de arriba ahhh no me acuerdo como se dice perdón :( -->
-    <div class="logo"> <img src="/utils/img/logo2.png" alt="imagen de el logo"> </div> 
+    <div class="logo"> <img src="/CET4/utils/img/logo2.png" alt="imagen de el logo"> </div> 
 
     <div class="contacto"> <a href="#" class="contacto">COMUNICATE CON NOSOTROS</a></div> 
    
