Ordene un poco el codigo en CSS, cambie de color la barra y el texto

--- a/templates/index/indexhomeoinicio.html
+++ b/templates/index/indexhomeoinicio.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class="elcostado">
+        <img src="/CET4/utils/img/casa-img1.png" alt="Inicio" class="casa1">
     </div>
      <div class="header">
         <form class="buscador-logo">
             <div class="buscador-logo2">
             <img src="/CET4/utils/img/busqueda-de-lupa.png" alt="Logo" class="logo">
-            <input class="buscador" placeholder=" Preguntas. . ." type="text"> 
-            <span> <button> Search </button></span>
+            <input class="buscador" placeholder=" Preguntas..." type="text"> 
             </div>
         </form>
     </div>
