--- a/templates/index/indexhomeoinicio.html
+++ b/templates/index/indexhomeoinicio.html
@@ -7,8 +7,13 @@
     <title>Home</title>
 </head>
 <body>
-    <div class="elcostado">
+    <div class="elcostado ordenado">
+        <img src="/CET4/utils/img/usuario.png" alt="Perfil" class="usuario">
         <img src="/CET4/utils/img/casa-img1.png" alt="Inicio" class="casa1">
+        <img src="/CET4/utils/img/campana-img2.png" alt="Notificaciones" class="campana2">
+        <img src="/CET4/utils/img/pregunta-img3.png" alt="Soporte" class="soporte3">
+        <img src="/CET4/utils/img/grupo-img4.png" alt="Grupos" class="grupo4">
+        <img src="/CET4/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5">
     </div>
      <div class="header">
         <form class="buscador-logo">
