--- a/templates/index/indexcentralayuda.html
+++ b/templates/index/indexcentralayuda.html
@@ -30,49 +30,49 @@
 
     <section class="grid">
       <article class="card">
-        <img src="https://img.icons8.com/fluency/48/megaphone.png" alt="Ícono de Anuncios">
+        <img src="/CET4/utils/img/anuncio.png" alt="Ícono de Anuncios">
         <h2>Anuncios</h2>
         <p>Esté al tanto de nuevas noticias</p>
       </article>
 
       <article class="card">
-        <img src="https://img.icons8.com/color/48/ruler.png" alt="Ícono de Reglas">
+        <img src="/CET4/utils/img/terminos_condiciones.png" alt="Ícono de Reglas">
         <h2>Reglas</h2>
         <p>Algunas condiciones que debe respetar</p>
       </article>
 
       <article class="card">
-        <img src="https://img.icons8.com/color/48/idea.png" alt="Ícono de Opiniones">
+        <img src="/CET4/utils/img/foco.png" alt="Ícono de Opiniones">
         <h2>Opiniones</h2>
         <p>Valoramos cada comentario</p>
       </article>
 
       <article class="card">
-        <img src="https://img.icons8.com/color/48/faq.png" alt="Ícono de Errores">
+        <img src="/CET4/utils/img/errores.png" alt="Ícono de Errores">
         <h2>Errores</h2>
         <p>Problemas que vemos, problemas que resolvemos</p>
       </article>
 
       <article class="card">
-        <img src="https://img.icons8.com/external-flat-juicy-fish/48/lock.png" alt="Ícono de Seguridad">
+        <img src="/CET4/utils/img/seguridad_privacidad.png" alt="Ícono de Seguridad">
         <h2>Seguridad y Privacidad</h2>
         <p>Nosotros te cubrimos la espalda</p>
       </article>
 
       <article class="card">
-        <img src="https://img.icons8.com/ios-filled/50/conference-call.png" alt="Ícono de Nosotros">
+        <img src="/CET4/utils/img/nosotros_lol.png" alt="Ícono de Nosotros">
         <h2>Nosotros</h2>
         <p>Los invitamos a conocernos un poco mejor</p>
       </article>
 
       <article class="card">
-        <img src="https://img.icons8.com/ios-filled/50/help.png" alt="Ícono de Contacto">
+        <img src="/CET4/utils/img/contactenos.png" alt="Ícono de Contacto">
         <h2>Contactanos</h2>
         <p>Cualquier consulta más personal</p>
       </article>
 
       <article class="card">
-        <img src="https://img.icons8.com/color/48/tutorial.png" alt="Ícono de Guías">
+        <img src="/CET4/utils/img/tutorial_lol.png" alt="Ícono de Guías">
         <h2>Guías y Tutoriales</h2>
         <p>Aprendé a fondo, nadie nace sabiendo</p>
       </article>
