--- a/templates/css/Centralayuda.css
+++ b/templates/css/Centralayuda.css
@@ -86,8 +86,9 @@ body {
 
 .card {
   background: white;
-  border-radius: 10px;
-  padding: 1.5rem;
+  size: 20px;
+  border-radius: 20px;
+  padding: 1rem;
   text-align: center;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
   transition: transform 0.2s ease;
@@ -99,6 +100,8 @@ body {
 
 .card img {
   margin-bottom: 10px;
+    width: 50%;
+  height: 200px;
 }
 
 .card h2 {
