voy a hacer cambios

--- a/templates/index/indexcentralayuda.html
+++ b/templates/index/indexcentralayuda.html
@@ -11,7 +11,7 @@
   <a href="/CET4/templates/index/indexprincipal.html"  class="margen" >CET4</a>
     <nav class="nav">
       <span>Español</span>
-      <a href="#">Iniciar Sesión</a>
+      <a href="/CET4/templates/index/indexiniciarsesion.html">Iniciar Sesión</a>
     </nav>
   </header>
 
