Finalizado, le agregue a la barra lateral para que se pueda ocultar, pero no su funcion. Lo ultimo del codigo de CSS esta hecho con IA, mil disculpas.

--- a/templates/index/indexhomeoinicio.html
+++ b/templates/index/indexhomeoinicio.html
@@ -7,7 +7,13 @@
     <title>Home</title>
 </head>
 <body>
+    <div id="toggle">
+        <span>&#9776;</span>
+    </div>
     <div class="elcostado ordenado">
+        <div id="out">
+            <span>&#9587;</span>
+        </div>
         <a href="#"><img src="/CET4/utils/img/usuario.png" alt="Perfil" class="usuario"></a>
         <a href="#"><img src="/CET4/utils/img/casa-img1.png" alt="Inicio" class="casa1"></a>
         <a href="#"><img src="/CET4/utils/img/campana-img2.png" alt="Notificaciones" class="campana2"></a>
