--- a/templates/css/estilohomeoinicio.css
+++ b/templates/css/estilohomeoinicio.css
@@ -23,6 +23,9 @@ body{
     height: 100vh;
     background-color:  #080c34 ;
     float: left; /*Esto hace que el costado se quede a la izquierda sin afectar el resto del contenido*/
+    position: fixed;
+    left: -10%; /*Esto oculta la barra lateral */
+    transition: left 0,3s ease; /*Esto hace que la barrra lateral se deslice suavemente al aparecer */ 
 }
 .buscador-logo{
     display: flex;
@@ -48,34 +51,34 @@ body{
 
 /* Inicio de la barra del costado */
 .usuario{
-    width: 75px;
-    height: 75px;
+    width: 50px;
+    height: 50px;
     margin-top: 50px;
 }
 .casa1{
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     margin-top: 50px;
 
 }
 .campana2{
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     margin-top: 50px;
 }
 .soporte3{
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     margin-top: 50px;
 }
 .grupo4{
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     margin-top: 50px;
 }
 .opcion5{
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     margin-top: 50px;
     
 }
@@ -85,3 +88,89 @@ body{
     align-items: center; /*Estp hace que se alieen al centro*/
 }
 /* Fin de la barra del costado */
+
+#toggle{
+    color: white;
+    float: left;
+    font-size: 30px;
+    margin-top: 15;
+    margin-left: 15px;
+}
+#out{
+    color:white;
+    float: left;
+    margin-top: 15px;
+    margin-right: 15px;
+    margin-left: 100px;
+}
+
+@media (max-width: 1024px) {
+    .buscador-logo2 {
+        width: 90%; /* Más flexible */
+    }
+
+    .buscador {
+        width: 100%;
+    }
+
+    .elcostado {
+        width: 60%;
+        left: -60%;
+    }
+
+    #toggle {
+        font-size: 26px;
+        margin-top: 10px;
+        margin-left: 10px;
+    }
+
+    #out {
+        margin-left: auto;
+        margin-right: 10px;
+    }
+
+    .usuario,
+    .casa1,
+    .campana2,
+    .soporte3,
+    .grupo4,
+    .opcion5 {
+        width: 40px;
+        height: 40px;
+        margin-top: 30px;
+    }
+}
+
+/* Para celulares chicos */
+@media (max-width: 600px) {
+    .buscador-logo2 {
+        width: 95%;
+    }
+
+    .buscador {
+        height: 30px;
+        font-size: 14px;
+    }
+
+    .logo {
+        top: 50%;
+        height: 16px;
+        width: 16px;
+    }
+
+    .elcostado {
+        width: 80%;
+        left: -80%;
+    }
+
+    .usuario,
+    .casa1,
+    .campana2,
+    .soporte3,
+    .grupo4,
+    .opcion5 {
+        width: 30px;
+        height: 30px;
+        margin-top: 20px;
+    }
+}
