--- a/templates/index/indexhomeoinicio.html
+++ b/templates/index/indexhomeoinicio.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CET4/templates/css/estilohomeoinicio.css">
-    <title>casa</title>
+    <title>Home</title>
 </head>
 <body>
     <div id="toggle">
-        <span>&#9776;</span>
+        <span>&#9776;</span> <!--El simbolo de Tres barras-->
     </div>
+    <!--Todo la barra lateral-->
     <div class="elcostado ordenado">
         <div id="out">
-            <span>&#9587;</span>
+            <span>&#9587;</span> <!--El simbolo de la X-->
         </div>
         <a href="#"><img src="/CET4/utils/img/usuario.png" alt="Perfil" class="usuario"></a>
         <a href="#"><img src="/CET4/utils/img/casa-img1.png" alt="Inicio" class="casa1"></a>
@@ -21,6 +22,7 @@
         <a href="#"><img src="/CET4/utils/img/grupo-img4.png" alt="Grupos" class="grupo4"></a>
         <a href="#"><img src="/CET4/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
     </div>
+    <!--Fin de la barra lateral-->
      <div class="header">
         <form class="buscador-logo">
             <div class="buscador-logo2">
@@ -29,7 +31,33 @@
             </div>
         </form>
     </div>
-    <div class="contenido-principal">
+    <div class="cuerpo1">
+             <br>
+    <div class="bloque-superpuesto">
+        <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
+        <div class="texto-superpuesto">Materia</div>
+    </div>
+    <div class="bloque-superpuesto">
+        <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
+        <div class="texto-superpuesto">Materia</div>
+    </div>
+    <div class="bloque-superpuesto">
+        <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
+        <div class="texto-superpuesto">Materia</div>
+    </div>
+    <br>
+    <div class="bloque-superpuesto">
+        <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia2">
+        <div class="texto-superpuesto">Materia</div>
+    </div>
+    <div class="bloque-superpuesto">
+        <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia2">
+        <div class="texto-superpuesto">Materia</div>
+    </div>
+    <div class="bloque-superpuesto">
+        <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia2">
+        <div class="texto-superpuesto">Materia</div>
+    </div>
     </div>
     <div class="footer">  
     </div>
