intento de que el <script> se linkee al archivo script.js de la carpeta models

--- a/templates/index/indexcrearcuenta.html
+++ b/templates/index/indexcrearcuenta.html
@@ -39,6 +39,6 @@
     <p class="recuperar">¿Olvidó su contraseña? <a href="#">RECUPERAR</a></p>
   </section>
 </main>
-
+<script src="../../models/script.js"></script>
 </body>
 </html>
