--- a/templates/index/indexcrearcuenta.html
+++ b/templates/index/indexcrearcuenta.html
@@ -21,11 +21,12 @@
     <header>
       <h1>¡Bienvenido!</h1>
     </header>
-    <form>
+    <form id="registro">
       <div class="input-group">
         <label for="email">Correo electrónico</label>
         <input type="email" id="email" name="email" required>
       </div>
+      <!-- es type password y no type text para q los caracters se vean como puntitos--> 
       <div class="input-group">
         <label for="password">Contraseña</label>
         <input type="password" id="password" name="password" required>
@@ -39,6 +40,6 @@
     <p class="recuperar">¿Olvidó su contraseña? <a href="#">RECUPERAR</a></p>
   </section>
 </main>
-<script src="../models/script.js"></script>
+<script src="../../models/script.js"></script>
 </body>
 </html>
