--- a/templates/index/indexhomeoinicio.html
+++ b/templates/index/indexhomeoinicio.html
@@ -61,5 +61,7 @@
     </div>
     <div class="footer">  
     </div>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
+
 </body>
 </html>
