--- a/templates/index/indexiniciarsesion.html
+++ b/templates/index/indexiniciarsesion.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Inicio de Sesión - CETA</title>
-  <link rel="stylesheet" href="/CET4/templates/css/estiloiniciarsesion.css"/>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/estiloiniciarsesion.css') }}"/>
 </head>
 <body>
   <main class="main-wrapper">
@@ -12,7 +12,7 @@
     <section class="login-container" aria-labelledby="login-title">
       <h1 id="login-title">¡BIENVENIDO DE VUELTA!</h1>
 
-      <form>
+      <form id="loginForm">
         <label for="email" class="sr-only">Correo electrónico</label>
         <input type="email" id="email" placeholder="INGRESE SU CORREO ELECTRONICO" required />
 
@@ -23,11 +23,17 @@
           <a href="#">¿OLVIDÓ SU CONTRASEÑA? RECUPERAR</a>
         </div>
 
-        <button type="submit">INICIAR</button>
+        <button type="submit" id="init">INICIAR</button>
       </form>
+        <div id="mensaje" class="mensaje"></div>
 
       <div class="links">
         ¿NO TIENE UNA CUENTA? <a href="#">CREAR CUENTA</a>
+      </div>
+      <div id="mensaje" class="mensaje">
+        {% if mensaje %}
+          {{ mensaje }}
+        {% endif %}
       </div>
     </section>
 
@@ -37,5 +43,7 @@
     </aside>
 
   </main>
+<script src="{{ url_for('static', filename='script.js') }}"></script>
+
 </body>
 </html>
