--- a/templates/index/indexcrearcuenta.html
+++ b/templates/index/indexcrearcuenta.html
@@ -21,7 +21,7 @@
     <header>
       <h1>¡Bienvenido!</h1>
     </header>
-    <form id="registro">
+    <form id="registro" action="/registrar" method="post">
       <div class="input-group">
         <label for="email">Correo electrónico</label>
         <input type="email" id="email" name="email" required>
