hice links en css flask

--- a/templates/index/indexhomeoinicio.html
+++ b/templates/index/indexhomeoinicio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CET4/templates/css/estilohomeoinicio.css">
+    <link rel="stylesheet" href="/CET4/">
     <title>Home</title>
 </head>
 <body>
@@ -61,5 +61,7 @@
     </div>
     <div class="footer">  
     </div>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
+
 </body>
 </html>
