--- a/templates/index/dprogramacionindex.html
+++ b/templates/index/dprogramacionindex.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CET4/static/css/estilohomeoinicio.css">
+    <link rel="stylesheet" href="/CET4/static/css/dprogramacion.css">
     <title>Home</title>
 </head>
 <body>
@@ -34,19 +34,26 @@
     <div class="cuerpo1">
              <br>
     <div class="bloque-superpuesto">
-        <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
-        <div class="texto-superpuesto">programacion</div>
+        <img src="/CET4/utils/img/materia1.png" alt="Materias" class="4to">
+        <div class="texto-superpuesto">4to</div>
     </div>
     <div class="bloque-superpuesto">
         <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
-        <div class="texto-superpuesto">informatica</div>
+        <div class="texto-superpuesto">5to</div>
     </div>
+    <div class="bloque-superpuesto">
+        <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
+        <div class="texto-superpuesto">6to</div>
+    </div>
+    <br>
+    <div class="bloque-superpuesto">
+        <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia2">
+        <div class="texto-superpuesto">7mo</div>
     
-    </div>
     </div>
     <div class="footer">  
     </div>
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
+    
 
 </body>
 </html>
