--- a/templates/index/indexhomeoinicio.html
+++ b/templates/index/indexhomeoinicio.html
@@ -35,7 +35,7 @@
              <br>
     <div class="bloque-superpuesto">
         <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
-        <div class="texto-superpuesto"> programacion</div>
+        <a href="/CET4/templates/index/dprogramacionindex.html" class="texto-superpuesto">programacion</a> 
     </div>
     <div class="bloque-superpuesto">
         <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
