--- a/templates/index/dinformaticaindex.html
+++ b/templates/index/dinformaticaindex.html
@@ -41,15 +41,14 @@
         <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
         <div class="texto-superpuesto">5to</div>
     </div>
-   <div class="bloque-superpuesto">
-    <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
-    <a href="/CET4/templates/index/indexsexto.html" class="texto-superpuesto">6to</a>
-</div>
-
+    <div class="bloque-superpuesto">
+        <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
+        <div class="texto-superpuesto" >6to</div>
+    </div>
     <br>
     <div class="bloque-superpuesto">
         <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/CET4/templates/index/indexdseptimo.html" class="texto-superpuesto"> 7mo</a>
+        <div class="texto-superpuesto"> 7mo</div>
 
     
     
