--- a/templates/index/indexcentralayuda.html
+++ b/templates/index/indexcentralayuda.html
@@ -22,7 +22,7 @@
     </section>
 
     <section class="intro">
-      <a href="#">¿Necesitás ayuda? ¡No dudes en contar con nosotros!</a>
+      <a href="/CET4/templates/index/indexcentralayuda.html">¿Necesitás ayuda? ¡No dudes en contar con nosotros!</a>
       <p>
         Bienvenido al Centro de Ayuda. En esta sección reunimos toda la información que podés necesitar para sacarte dudas y resolver problemas rápido y fácil.
       </p>
