--- a/templates/index/indexdquinto.html
+++ b/templates/index/indexdquinto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CET4/static/css/dprogramacion.css">
-    <title>dprogramacion</title>
+    <title>programacion quinto</title>
 </head>
 <body>
     <div id="toggle">
@@ -41,18 +41,14 @@
         <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
         <div class="texto-superpuesto">5to</div>
     </div>
-   <div class="bloque-superpuesto">
-    <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
-    <a href="/CET4/templates/index/indexsexto.html" class="texto-superpuesto">6to</a>
-</div>
-
+    <div class="bloque-superpuesto">
+        <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
+        <div class="texto-superpuesto">6to</div>
+    </div>
     <br>
     <div class="bloque-superpuesto">
         <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/CET4/templates/index/indexdseptimo.html" class="texto-superpuesto"> 7mo</a>
-
-    
-    
+        <div class="texto-superpuesto">7mo</div>
     
     </div>
     <div class="footer">  
