--- a/templates/index/indexhomeoinicio.html
+++ b/templates/index/indexhomeoinicio.html
@@ -39,7 +39,7 @@
     </div>
     <div class="bloque-superpuesto">
         <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
-        <div class="texto-superpuesto">informatica</div>
+        <a href="/CET4/templates/index/dinformaticaindex.html" class="texto-superpuesto">informatica</a>
     </div>
     
     </div>
