--- a/templates/index/indexiniciarsesion.html
+++ b/templates/index/indexiniciarsesion.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Inicio de Sesión - CETA</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/estiloiniciarsesion.css') }}"/>
+  <link rel="stylesheet" href="/CET4/static/css/estiloiniciarsesion.css">
 </head>
 <body>
   <main class="main-wrapper">
