--- a/templates/index/dinformaticaindex.html
+++ b/templates/index/dinformaticaindex.html
@@ -35,7 +35,8 @@
              <br>
     <div class="bloque-superpuesto">
         <img src="/CET4/utils/img/materia1.png" alt="Materias" class="4to">
-        <div class="texto-superpuesto">4to</div>
+        <div
+         class="texto-superpuesto">4to</div>
     </div>
     <div class="bloque-superpuesto">
         <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
