--- a/templates/index/indexcomentario.html
+++ b/templates/index/indexcomentario.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Comentarios con Menú</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/indexcajacomentarios.css') }}">
+  <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/indexcajacomentarios.css') }}"> -->
+  <link rel="stylesheet" href="/static/css/indexcajacomentario.css">
 </head>
 <body>
   <div class="elcostado ordenado">
