--- a/templates/index/indexcrearcuenta.html
+++ b/templates/index/indexcrearcuenta.html
@@ -23,6 +23,10 @@
     </header>
     <form id="registro" action="/registrar" method="post">
       <div class="input-group">
+        <label for="name">Nombre de usuario</label>
+        <input type="text" id="name" name="name" required>
+      </div>
+      <div class="input-group">
         <label for="email">Correo electrónico</label>
         <input type="email" id="email" name="email" required>
       </div>
