--- a/templates/index/indexcrearcuenta.html
+++ b/templates/index/indexcrearcuenta.html
@@ -21,7 +21,7 @@
     <header>
       <h1>¡Bienvenido!</h1>
     </header>
-    <form id="registro" action="/registrar" method="post">
+    <form id="registro">
       <div class="input-group">
         <label for="name">Nombre de usuario</label>
         <input type="text" id="name" name="name" required>
