hice el registro (ya funcional) y modifiqué la bd

--- a/templates/index/indexcrearcuenta.html
+++ b/templates/index/indexcrearcuenta.html
@@ -44,6 +44,6 @@
     <p class="recuperar">¿Olvidó su contraseña? <a href="#">RECUPERAR</a></p>
   </section>
 </main>
-<script src="../../models/script.js"></script>
+<script src="/static/js/registro.js"></script>
 </body>
 </html>
