cambios de estilos y links

--- a/templates/index/dinformaticaindex.html
+++ b/templates/index/dinformaticaindex.html
@@ -31,30 +31,33 @@
             </div>
         </form>
     </div>
-    <div class="cuerpo1">
-             <br>
-    <div class="bloque-superpuesto">
-        <img src="/CET4/utils/img/materia1.png" alt="Materias" class="4to">
-        <div
-         class="texto-superpuesto">4to</div>
-    </div>
-    <div class="bloque-superpuesto">
-        <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
-        <div class="texto-superpuesto">5to</div>
-    </div>
-    <div class="bloque-superpuesto">
-        <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
-        <div class="texto-superpuesto" >6to</div>
-    </div>
-    <br>
-    <div class="bloque-superpuesto">
-        <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia2">
-        <div class="texto-superpuesto"> 7mo</div>
+<main class="cuerpo1">
+    <section class="bloque-superpuesto">
+        <a href="/CET4/templates/index/indexdcuarto.html">
+            <img src="/CET4/static/utils/img/materia1.png" alt="Materias 4to">
+            <div class="texto-superpuesto">4to</div>
+        </a>
+    </section>
+    <section class="bloque-superpuesto">
+        <a href="/CET4/templates/index/indexdquinto.html">
+            <img src="/CET4/static/utils/img/materia1.png" alt="Materias 5to">
+            <div class="texto-superpuesto">5to</div>
+        </a>
+    </section>
+    <section class="bloque-superpuesto">
+        <a href="/CET4/templates/index/indexsexto.html">
+            <img src="/CET4/static/utils/img/materia1.png" alt="Materias 6to">
+            <div class="texto-superpuesto">6to</div>
+        </a>
+    </section>
+    <section class="bloque-superpuesto">
+        <a href="/CET4/templates/index/indexdseptimo.html">
+            <img src="/CET4/static/utils/img/materia1.png" alt="Materias 7mo">
+            <div class="texto-superpuesto">7mo</div>
+        </a>
+    </section>
+</main>
 
-    
-    
-    
-    </div>
     <div class="footer">  
     </div>
     
