--- a/templates/index/indexdquinto.html
+++ b/templates/index/indexdquinto.html
@@ -35,20 +35,20 @@
              <br>
     <div class="bloque-superpuesto">
         <img src="/CET4/utils/img/materia1.png" alt="Materias" class="4to">
-        <div class="texto-superpuesto">4to</div>
+        <div class="texto-superpuesto">materia 1</div>
     </div>
     <div class="bloque-superpuesto">
         <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
-        <div class="texto-superpuesto">5to</div>
+        <div class="texto-superpuesto">materia 2</div>
     </div>
     <div class="bloque-superpuesto">
         <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
-        <div class="texto-superpuesto">6to</div>
+        <div class="texto-superpuesto">materia 3</div>
     </div>
     <br>
     <div class="bloque-superpuesto">
         <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia2">
-        <div class="texto-superpuesto">7mo</div>
+        <div class="texto-superpuesto">materia 4</div>
     
     </div>
     <div class="footer">  
