cambie las rutas y ahora se conectan, avance con el python y el js para poder hacer los comentarios (todavia no se terminó) usar las rutas que pusimos

--- a/static/css/dprogramacion.css
+++ b/static/css/dprogramacion.css
@@ -135,7 +135,7 @@ body{
     padding: 10px 15px;
     border-radius: 10px;
     text-align: center;
-    pointer-events: none; /* El texto no bloquea clics */
+    /*pointer-events: none;  El texto no bloquea clics */
 }
 
 #toggle{
