--- a/templates/index/dprogramacionindex.html
+++ b/templates/index/dprogramacionindex.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CET4/static/css/dprogramacion.css">
+    <link rel="stylesheet" href="/static/css/dprogramacion.css">
     <title>dprogramacion</title>
 </head>
 <body>
@@ -15,18 +15,18 @@
         <div id="out">
             <span>&#9587;</span> <!--El simbolo de la X-->
         </div>
-        <a href="#"><img src="/CET4/utils/img/usuario.png" alt="Perfil" class="usuario"></a>
-        <a href="#"><img src="/CET4/utils/img/casa-img1.png" alt="Inicio" class="casa1"></a>
-        <a href="#"><img src="/CET4/utils/img/campana-img2.png" alt="Notificaciones" class="campana2"></a>
-        <a href="#"><img src="/CET4/utils/img/pregunta-img3.png" alt="Soporte" class="soporte3"></a>
-        <a href="#"><img src="/CET4/utils/img/grupo-img4.png" alt="Grupos" class="grupo4"></a>
-        <a href="#"><img src="/CET4/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
+        <a href="#"><img src="/static/utils/img/usuario.png" alt="Perfil" class="usuario"></a>
+        <a href="#"><img src="/static/utils/img/casa-img1.png" alt="Inicio" class="casa1"></a>
+        <a href="#"><img src="/static/utils/img/campana-img2.png" alt="Notificaciones" class="campana2"></a>
+        <a href="#"><img src="/static/utils/img/pregunta-img3.png" alt="Soporte" class="soporte3"></a>
+        <a href="#"><img src="/static/utils/img/grupo-img4.png" alt="Grupos" class="grupo4"></a>
+        <a href="#"><img src="/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
     </div>
     <!--Fin de la barra lateral-->
      <div class="header">
         <form class="buscador-logo">
             <div class="buscador-logo2">
-            <img src="/CET4/utils/img/busqueda-de-lupa.png" alt="ErrorLogo" class="logo">
+            <img src="/static/utils/img/busqueda-de-lupa.png" alt="ErrorLogo" class="logo">
             <input class="buscador" placeholder=" Preguntas..." type="text"> 
             </div>
         </form>
@@ -34,26 +34,22 @@
     <div class="cuerpo1">
              <br>
     <div class="bloque-superpuesto">
-        <img src="/CET4/utils/img/materia1.png" alt="Materias" class="4to">
-        <div class="texto-superpuesto">4to</div>
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="4to">
+        <a href='/4toprogramacion' class="texto-superpuesto">4to</a> 
     </div>
     <div class="bloque-superpuesto">
-        <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
-        <div class="texto-superpuesto">5to</div>
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
+        <a href='/5toprogramacion' class="texto-superpuesto">5to</a>
     </div>
    <div class="bloque-superpuesto">
-    <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
-    <a href="/CET4/templates/index/indexsexto.html" class="texto-superpuesto">6to</a>
+    <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
+    <a href='/6toprogramacion' class="texto-superpuesto">6to</a>
 </div>
 
     <br>
     <div class="bloque-superpuesto">
-        <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/CET4/templates/index/indexdseptimo.html" class="texto-superpuesto"> 7mo</a>
-
-    
-    
-    
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
+        <a href='/7toprogramacion' class="texto-superpuesto"> 7mo</a>
     </div>
     <div class="footer">  
     </div>
