--- a/templates/index/indexhomeoinicio.html
+++ b/templates/index/indexhomeoinicio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CET4/static/css/estilohomeoinicio.css">
+    <link rel="stylesheet" href="/static/css/estilohomeoinicio.css">
     <title>Home</title>
 </head>
 <body>
@@ -15,18 +15,18 @@
         <div id="out">
             <span>&#9587;</span> <!--El simbolo de la X-->
         </div>
-        <a href="#"><img src="/CET4/utils/img/usuario.png" alt="Perfil" class="usuario"></a>
-        <a href="#"><img src="/CET4/utils/img/casa-img1.png" alt="Inicio" class="casa1"></a>
-        <a href="#"><img src="/CET4/utils/img/campana-img2.png" alt="Notificaciones" class="campana2"></a>
-        <a href="#"><img src="/CET4/utils/img/pregunta-img3.png" alt="Soporte" class="soporte3"></a>
-        <a href="#"><img src="/CET4/utils/img/grupo-img4.png" alt="Grupos" class="grupo4"></a>
-        <a href="#"><img src="/CET4/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
+        <a href="#"><img src="/static/utils/img/usuario.png" alt="Perfil" class="usuario"></a>
+        <a href="#"><img src="/static/utils/img/casa-img1.png" alt="Inicio" class="casa1"></a>
+        <a href="#"><img src="/static/utils/img/campana-img2.png" alt="Notificaciones" class="campana2"></a>
+        <a href="#"><img src="/static/utils/img/pregunta-img3.png" alt="Soporte" class="soporte3"></a>
+        <a href="#"><img src="/static/utils/img/grupo-img4.png" alt="Grupos" class="grupo4"></a>
+        <a href="#"><img src="/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
     </div>
     <!--Fin de la barra lateral-->
      <div class="header">
         <form class="buscador-logo">
             <div class="buscador-logo2">
-            <img src="/CET4/utils/img/busqueda-de-lupa.png" alt="ErrorLogo" class="logo">
+            <img src="/static/utils/img/busqueda-de-lupa.png" alt="ErrorLogo" class="logo">
             <input class="buscador" placeholder=" Preguntas..." type="text"> 
             </div>
         </form>
@@ -34,19 +34,19 @@
     <div class="cuerpo1">
              <br>
     <div class="bloque-superpuesto">
-        <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href="/CET4/templates/index/dprogramacionindex.html" class="texto-superpuesto">programacion</a> 
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
+        <a href='/programacion' class="texto-superpuesto">programacion</a> 
     </div>
     <div class="bloque-superpuesto">
-        <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href="/CET4/templates/index/dinformaticaindex.html" class="texto-superpuesto">informatica</a>
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
+        <a href='/informatica' class="texto-superpuesto">informatica</a>
     </div>
     
     </div>
     </div>
     <div class="footer">  
     </div>
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
+    <script src="/static/js/comentarios.js"></script>
 
 </body>
 </html>
