ya funciona el inicio de sesion, cambie rutas y funciona todo lo agregado

--- a/templates/index/indexcrearcuenta.html
+++ b/templates/index/indexcrearcuenta.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>crear cuenta cet4</title>
-    <link rel="stylesheet" href="/CET4/static/css/estilocrearcuenta.css">
+    <link rel="stylesheet" href="/static/css/estilocrearcuenta.css">
 </head>
 <body>
     <main class="contenedor">
@@ -12,7 +12,7 @@
   <section class="presentacion">
     <figure class="cota">
       <figcaption class="globo">¡Hola camarada! Me presento, yo soy Zettino</figcaption>
-      <img class="masimg" src="/CET4/utils/img/zettino_sinfondo.png" alt="Mascota Zettino">
+      <img class="masimg" src="/static/utils/img/zettino_sinfondo.png" alt="Mascota Zettino">
     </figure>
   </section>
 
@@ -40,6 +40,6 @@
     <p class="recuperar">¿Olvidó su contraseña? <a href="#">RECUPERAR</a></p>
   </section>
 </main>
-<script src="../../models/script.js"></script>
+<script src="/static/js/script.js"></script>
 </body>
 </html>
