--- a/templates/index/indexprincipal.html
+++ b/templates/index/indexprincipal.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> C.E.T.4</title>
-  <link rel="stylesheet" href="/cet4/static/css/style_principal.css">
+  <link rel="stylesheet" href="/static/css/style_principal.css">
 </head>
 <body>
     
   <header class="header"> 
     <!-- aca esta el coso de la pagina el coso de arriba ahhh no me acuerdo como se dice perdón :( -->
-    <div class="logo"> <img src="/CET4/utils/img/logo2.png" alt="imagen de el logo"> </div> 
+    <div class="logo"> <img src="/static/utils/img/logo2.png" alt="imagen de el logo"> </div>
 
     <div class="contacto"> <a href="#" class="contacto">COMUNICATE CON NOSOTROS</a></div> 
    
@@ -32,8 +32,8 @@
   <!-- aca estan los botones ya conectados con sus correspondientes pagina les puse el target coso para que no te abra 
    otra pestaña que directamente te lo abra en la misma  -->
 <div class="botones">
-        <a href="indexcrearcuenta.html" target="_parent" class="boton">CREAR CUENTA </a>
-        <a href="indexiniciarsesion.html" target="_parent" class="boton">INICIAR SESION </a>
+        <a href='/registrarse' target="_parent" class="boton">CREAR CUENTA </a>
+        <a href="/iniciarsesion" target="_parent" class="boton">INICIAR SESION </a>
 </body>
 </html>
 
